[gd_scene load_steps=2 format=3 uid="uid://cy1i6pbfawc4k"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_jbwvk"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_jbwvk")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TopBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 200

[node name="P1Section" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar/P1Section"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "JUGADOR 1"

[node name="HPBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/TopBar/P1Section"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
value = 100.0
show_percentage = false

[node name="HPLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar/P1Section"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "HP: 100/100"

[node name="LivesLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar/P1Section"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Vidas: ♥ ♥ ♥"

[node name="P2Section" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TopBar"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar/P2Section"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "JUGADOR 2"
horizontal_alignment = 2

[node name="HPBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/TopBar/P2Section"]
custom_minimum_size = Vector2(300, 30)
layout_mode = 2
size_flags_horizontal = 8
value = 100.0
show_percentage = false

[node name="HPLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar/P2Section"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
text = "HP: 100/100"
horizontal_alignment = 2

[node name="LivesLabel" type="Label" parent="MarginContainer/VBoxContainer/TopBar/P2Section"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Vidas: ♥ ♥ ♥"
horizontal_alignment = 2

[node name="BallSpeedLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 22
text = "Velocidad Bola: 200 px/s"
horizontal_alignment = 1
